Bug 352822 - "apps since MOZILLA_1_8_BRANCH don't build anymore on FreeBSD" (make some floating point exceptions static in txDouble.h) [p=jay@imagine27.com (Justin Grant) r+sr=sicking a1.9=schrep]