content/xslt/public/txDouble.h
@@ -44,11 +44,11 @@
 #ifdef __FreeBSD__
 #include <ieeefp.h>
 #ifdef __alpha__
-fp_except_t allmask = FP_X_INV|FP_X_OFL|FP_X_UFL|FP_X_DZ|FP_X_IMP;
+static fp_except_t allmask = FP_X_INV|FP_X_OFL|FP_X_UFL|FP_X_DZ|FP_X_IMP;
 #else
-fp_except_t allmask = FP_X_INV|FP_X_OFL|FP_X_UFL|FP_X_DZ|FP_X_IMP|FP_X_DNML;
+static fp_except_t allmask = FP_X_INV|FP_X_OFL|FP_X_UFL|FP_X_DZ|FP_X_IMP|FP_X_DNML;
 #endif
-fp_except_t oldmask = fpsetmask(~allmask);
+static fp_except_t oldmask = fpsetmask(~allmask);
 #endif
 
 /**
